@@ -1,2 +1,5 @@
 # HiLoDa_OOP
 The HiLoDa project: Graph algorithm simulator
+
+# Add VM in IntellIJ
+--module-path /home/tuanvu0801/IntellIJProject/javafx-sdk-11./javafx-sdk-11.0.2/lib --add-modules=javafx.controls, javafx.fxml
